Requirement specification done

--- a/Documentation/Requirements/subsections/dbAccess.tex
+++ b/Documentation/Requirements/subsections/dbAccess.tex
@@ -2,8 +2,11 @@ This module deals with the creation and interaction with the database.
 
 \subsubsection{Use-cases}
 After a project has been created, a database collection is created and associated with it. The project can then request and update the database and persist as the shuffling criteria grows.\par
-\includegraphics[width=13cm]{./graphics/databaseAccessUseCase.jpg}
-    \rule{0\linewidth}{0.15\linewidth}\par
+\begin{figure}[h]
+	\centering
+	\includegraphics[width=15cm]{./graphics/databaseAccessUseCase.jpg}
+	\caption{Database access use case}
+\end{figure}
 \begin{enumerate}
 \item createDB\par
 Priority: Critical.\par
