--- a/Documentation/Requirements/subsections/modularDesign.tex
+++ b/Documentation/Requirements/subsections/modularDesign.tex
@@ -1,3 +1,5 @@
+
+
 \begin{flushleft}
 The system is to be a modular system which allows for:
 \end{flushleft}
@@ -19,3 +21,9 @@ To this end there should be:
 \begin{flushleft}
 Modular design allows that each module encapsulates information that is not available to the rest of the program. This information hiding reduces the cost of subsequent design changes when future functionality is added to STORM. For example, if at a later stage functionality is added to allow for personality tests to be completed within STORM and results are automatically pulled in, a new module can be added without affecting other modules.
 \end{flushleft}
+
+\begin{figure}[h]
+\centering
+\includegraphics[width=15cm]{./graphics/stormOverview.jpg}
+\caption{High level overview of STORM}
+\end{figure}
