--- a/Documentation/Requirements/subsections/visionAndScope.tex
+++ b/Documentation/Requirements/subsections/visionAndScope.tex
@@ -6,7 +6,7 @@ shuffling system.
 The system was going to be used by the lecturers of the module ``Software Engineerin'' to
 determine teams for the ``Rocking the boat'' exercise of the ``Software Engineering'' module using a
 set of lecturer defined criteria to select the teams with. An incomplete requirements specification document
-was designed and the project was brought to an end. 
+was designed and the project was halted. 
 
 \subsubsection{Project Background}
 The lecturers of the ``Software Engineering'' module sought the need for such a shuffling tool, this
