--- a/Documentation/Requirements/subsections/userAccess.tex
+++ b/Documentation/Requirements/subsections/userAccess.tex
@@ -1,19 +1,22 @@
-This module deals with the STORM user access, specifically signing up, logging in and logging out.
+This module deals with the STORM user access, specifically signing up, logging in, logging out and user authentication.
 
 \subsubsection{Use-cases}
-The user access module provides services to sign up, login and log out.\par
-\includegraphics[width=13cm]{./graphics/userAccessUseCase.jpg}
+\begin{figure}[h]
+    \centering
+\includegraphics[width=15cm]{./graphics/userAccessUseCase.jpg}
+    \caption{ User access module use case}
+\end{figure}
+
     \rule{0\linewidth}{0.15\linewidth}\par
 \begin{enumerate}
 \item Sign Up\par
 Priority: Critical.\par
 Pre-condition: Client must have a valid e-mail address.\par
 Post-condition: Client has a STORM profile.\par
-\begin{figure}[p]
+\begin{figure}[h]
     \centering
-    \includegraphics[width=13cm]{./graphics/signUpState.jpg}
+    \includegraphics[width=15cm]{./graphics/signUpState.jpg}
     \caption{SignUp state diagram}
-    \label{fig:signUp_state}
 \end{figure}
 \item Login\par
 Priority: Critical.\par
@@ -22,11 +25,10 @@ Post-condition: Client can now use STORM functionality.\par
 \item Log out\par
 Priority: Critical.\par
 Pre-condition: Client must be logged into STORM.\par
-\begin{figure}[p]
+\begin{figure}[h]
     \centering
-    \includegraphics[width=13cm]{./graphics/logInOutState.jpg}
+    \includegraphics[width=15cm]{./graphics/logInOutState.jpg}
     \caption{Login/logout state diagram}
-    \label{fig:login/out_state}
 \end{figure}
 \end{enumerate}
 
