Architectural requirements (Design)

--- a/Documentation/Requirements/masterSpecification.tex
+++ b/Documentation/Requirements/masterSpecification.tex
@@ -58,6 +58,16 @@
 \subsection{Reporting Module}
 \input{./subsections/reporting.tex}
 \section{Architectural Requirements}
+This section discusses the software architecture requirements — that is the requirements around the
+software infrastructure within which the application functionality is to be developed. The purpose
+of this infrastructure is to address the non-functional requirements. In particular, the architecture
+requirements specify
+\begin{itemize}
+	\item the architectural responsibilities which need to be addressed,
+	\item the access and integration requirements for the system,
+	\item the quality requirements, and
+	\item the architecture constraints specified by the client
+\end{itemize}
 \subsection{Access and Integration Requirements}
 \input{./subsections/accessAndIntegrationRequirements.tex}
 \subsection{Quality Requirements}
@@ -66,4 +76,10 @@
 \input{./subsections/architecturalResponsibilities.tex}
 \subsection{Architecture Constraints}
 \input{./subsections/architectureConstraints.tex}
+\section{Architecture design}
+\subsection{Overview}
+\subsection{Modularization}
+\subsection{Architectural tactics addressing quality requirements}
+\subsection{Architectural components} 
+\subsection{Development architecture} 
 \end{document}
