--- a/Documentation/Requirements/subsections/accessAndIntegrationRequirements.tex
+++ b/Documentation/Requirements/subsections/accessAndIntegrationRequirements.tex
@@ -1,3 +1,11 @@
+This section discusses
+\begin {enumerate}
+\item the requirements for the different channels through which the system can be accessed by
+people and systems, and
+\item the integration channels which must be supported by this system.
+This section specifies the different channels through which users will be able to access the system
+services.
+\end{enumerate}
 \subsubsection{Human Access Channels}
 The system will be accessible by human users through the following channels:\par
 \begin{itemize}
@@ -16,3 +24,14 @@ The system will be accessible by human users through the following channels:\par
 	\item SMTP
 	\end{itemize}
 \end{itemize}
+\subsubsection{Integration channels}
+The system will allow manual integration through importing and exporting of CSV
+files. In particular, the system will support
+\begin{itemize}
+\item Importing of subject data from CSV files.
+\item Importing of new criteria for shuffling subjects from CSV files.
+\item Exporting of groups to CSV files.
+\item Exporting of subject data for offline editing to CSV files.
+\end{itemize}
+
+
