--- a/Documentation/Requirements/subsections/architectureConstraints.tex
+++ b/Documentation/Requirements/subsections/architectureConstraints.tex
@@ -4,5 +4,5 @@ the system subject to:
 \end{flushleft}
 \begin{enumerate}
 \item The architecture being deployable on a server, such as the Linux server of the University of Pretoria.
-\item The architecture is constrained to using web technology.
+\item The architecture is constrained to using web technology and open source API's and tools.
 \end{enumerate}
