--- a/Documentation/Requirements/subsections/architecturalResponsibilities.tex
+++ b/Documentation/Requirements/subsections/architecturalResponsibilities.tex
@@ -4,5 +4,6 @@ The architectural responsibilities for STORM includes the responsibilities of pr
 \item hosting and providing the execution environment for the services/business logic of the system,
 \item persisting and providing access to domain objects,
 \item logging,
-\item and delivering reports readable by 3rd party applications.
+\item and delivering reports readable by 3rd party applications,
+\item sending emails.
 \end{itemize}
