--- a/Documentation/Requirements/masterSpecification.tex
+++ b/Documentation/Requirements/masterSpecification.tex
@@ -87,6 +87,7 @@ MVC architecture - using express.js framework
 \subsection{Modularization}
 \input{./subsections/modularization.tex}
 \subsection{Architectural tactics addressing quality requirements}
+\input{./subsections/architecturalTactics.tex}
 \subsection{Architectural components} 
 \subsection{Development architecture} 
 \end{document}
