Final Architectural doc

--- a/Documentation/Requirements/subsections/architecturalTactics.tex
+++ b/Documentation/Requirements/subsections/architecturalTactics.tex
@@ -14,3 +14,17 @@ The system will use a rich, dynamic JQuery-UI component library in order to:
 \item provide a rich, dynamic user interface for usability (requirement \ref {3.2.1}),
 \item improve scalability (requirement \ref {3.2.2}) and performance (requirement \ref {3.2.3}).
 \end{itemize}
+
+\subsubsection{Maximize client-side scripting}
+The system will use client-side javascript where possible to address:
+\begin {itemize}
+\item Performance (requirement \ref {3.2.3}) by avoiding the netork round trip,
+\item scalability (requirement \ref {3.2.2}) and security (requirement \ref {3.2.6}) by hiding data out of a user's bounds.
+\end{itemize}
+
+\subsubsection{MVC}
+The system will use a MVC patter to address:
+\begin {itemize}
+\item Usability (requirement \ref {3.2.1}),
+\item deploayability (requirement \ref {3.2.5}).
+\end{itemize}
