--- a/Documentation/User Manual/GeneralInformation/Installation.tex
+++ b/Documentation/User Manual/GeneralInformation/Installation.tex
@@ -1,19 +1,59 @@
-\subsubsection{Back-end}
-	Refer to this section for information on the back-end part of the system. For example the part that will be hosted on the server.\par
-	\vspace{0.3cm}
-	
-What to install on the server:
-\begin{description} 
-\item[Node.js] \hfill 
-\\ For this system to run on the server, Node.js has to be installed.
-\\ This is easily achieved by navigating to their website (\href{https://www.nodejs.org}{https://www.nodejs.org}) and clicking on install. 
-\item[NPM] \hfill 
-\\ NPM must also be installed on the server.  This can be achieved by going to their website  (\href{https://www.npmjs.com/package/npm}{https://www.npmjs.com/package/npm}) and following the easy instructions. 
-\end{description}
-
 \subsubsection{Front-end}
 	Refer to this section for information on the front-end part of the system. For example the part that will be	used by the bulk of the users to shuffle the teams on the web client.\par
 	\vspace{0.3cm}
 	
-Because the system is web based, it does not have to be installed on your device. 
-Your browser might ask you to install Java if you do not have the appropriate version.
+Because the system is web based, it does not have to be installed on your device. It can simply be opened from any web browser and software to open and edit .csv files such as OpenOffice or Microsoft Word.
+Your web browser might ask you to install Java if you do not have the appropriate version. Your JavaScript has to be enabled in your web browser. It can be done by following this steps:
+
+\begin{description} 
+\item[Google Chrome] \hfill 
+\begin{enumerate}
+\item Click the Chrome menu icon Chrome menu on the browser toolbar.
+\item Select Settings.
+\item On the "Settings" page, click the Show advanced settings... link.
+\item In the "Privacy" section, click Content settings...
+\item Select Allow all sites to run JavaScript (recommended) in the "JavaScript" section.
+\item Click Done
+\item Finally, refresh your browser.
+\item If you did not manage to enbale JavaScript, follow the link for more information (\href{http://activatejavascript.org/en/instructions/chrome\#instructions}{http://activatejavascript.org/en/instructions/chrome\#instructions})
+\end{enumerate}
+\item[Mozilla Firefox] \hfill 
+\begin{enumerate}
+\item Open a new Firefox browser window or tab.
+\item Copy the following then paste it into the Firefox address bar: about:config
+\item Hit the Enter key.
+\item On the following page, click the button: "I'll be careful, I promise!"
+\item Find the javascript.enabled row under the Preference Name heading.
+\item Double-click anywhere within the javascript.enabled row to toggle the value from "False" to "True".
+\item Finally, refresh your browser.
+\item If you did not manage to enbale JavaScript, follow the link for more information (\href{http://activatejavascript.org/en/instructions/firefox}{http://activatejavascript.org/en/instructions/firefox})
+\end{enumerate}
+\item[Safari] \hfill 
+\begin{enumerate}
+\item In the Edit drop-down menu at the top of the window, select Preferences...
+\item Select the Security icon/tab at the top on the window.
+\item Then, check the Enable JavaScript checkbox.
+\item Close the dialog box to save your changes.
+\item Finally, refresh your browser.
+\item If you did not manage to enbale JavaScript, follow the link for more information (\href{http://activatejavascript.org/en/instructions/safari\#instructions}{http://activatejavascript.org/en/instructions/safari\#instructions})
+\end{enumerate}
+\item[Internet Explorer] \hfill 
+\begin{enumerate}
+\item Click the gear icon/Tools menu to the right of the Internet Explorer address bar.
+\item Select Internet Options from the drop-down menu.
+\item Next, select the Security tab at the top of the dialog box.
+\item Then, select the earth (Internet) icon.
+\item Then select the Custom Level button under the Security level for this zone section.
+\item Locate the Scripting section within the list.
+\item Under Active Scripting, select Enable, then hit OK.
+\item Answer yes to the following conformation box.
+\item Hit OK to close the Internet Options window.
+\item Finally, refresh your browser.
+\item If you did not manage to enbale JavaScript, follow the link for more information (\href{http://activatejavascript.org/en/instructions/ie\#instructions}{http://activatejavascript.org/en/instructions/ie\#instructions})
+\end{enumerate}
+\end{description}
+
+\vspace{0.3cm}
+Please note:
+\textit{There is a risk in enabling JavaScript - scripting essentially allows execution of code on the browser. The vulnerabilities range from reading your browser's history to installing malware to phishing your bank credentials - each of which can potentially cause you ``harm'' in some way. However, given that most of today's web sites rely on scripting, there's a huge loss in turning scripting off, up to and including the site no longer showing up in your browser. Turning off scripting also won't protect against other ways for bad things to happen to your computer, so the return for the inconvenience isn't incredibly high. Probably the most common use of scripting is analytics, which allows the webmaster for that site to gain information about who is accessing which pages, thus potentially improving the flow of the site and the information presented. However, the flip side of analytics is targeted advertising, which allows advertisers to follow users across multiple sites. The majority of scripts on websites are ``mostly'' harmless, just like the majority of software that's available is ``mostly'' harmless. Security folks focus on the malicious side of things, and continually re-learn that there's a trade-off between usability and security.}
+
