--- a/Documentation/User Manual/GeneralInformation/SystemOverview.tex
+++ b/Documentation/User Manual/GeneralInformation/SystemOverview.tex
@@ -1,1 +1,5 @@
-The STORM system enables users to build teams, from a list of subjects, by selecting a set of criteria. This will aid the users in such a way that the users do not have to build the teams manually, which may require a lot of time. The users can rather spend their time on analysing the results of each ``Rocking the Boat'' round to change the criteria for the next round more effectively.
+The STORM system enables users to allocate teams, from a list of subjects, by selecting a set of criteria. The criteria can typically be marks, gender, Belbin roles, personality types or the number of times certain subjects have worked together. Multiple criteria may be used with different weights to ensure that the perfect teams are allocated. This will aid the users in such a way that the users do not have to allocate the teams manually, which may require a lot of time. The users can rather spend their time on analysing the results of each ``Rocking the Boat'' round to change the criteria for the next round more effectively.
+
+\par
+
+``Pieterse V., Thompson L. \& Masrhall L ``Rocking the boat'' - An approach to facilitate formation of effective teams. Proceedings of the 41st annual conference of the Southern African Computer Lecturers' Association (SACLA). (6-8 July 2011).''
