--- a/Documentation/User Manual/UserManual.tex
+++ b/Documentation/User Manual/UserManual.tex
@@ -30,10 +30,15 @@
 	\vspace{0.7cm}
 %Author's name
     {\normalsize Renaldo van Dyk 12204359\par}
-    {\normalsize Andreas du Preez 12207871\par}
     {\normalsize Sean Hill 12221458\par}
     {\normalsize Shaun Meintjes 133310896\par}
     {\normalsize Johann Dian Marx 12105202\par}
+
+	\vspace{0.7cm}
+	{\Large Client: \par}
+	{\normalsize Linda Marshall \& Vreda Pieterse \par}
+	{\normalsize  lmarshall@cs.up.ac.za,vpieterse@cs.up.ac.za\par}
+	\vspace{0.7cm}
     
     \vspace{1cm}
     
