Finished Architectural Requirements

--- a/Documentation/Requirements/subsections/architecturalTactics.tex
+++ b/Documentation/Requirements/subsections/architecturalTactics.tex
@@ -23,8 +23,8 @@ The system will use client-side javascript where possible to address:
 \end{itemize}
 
 \subsubsection{MVC}
-The system will use a MVC patter to address:
+The system will use a MVC pattern to address:
 \begin {itemize}
 \item Usability (requirement \ref {3.2.1}),
-\item deploayability (requirement \ref {3.2.5}).
+\item Deployability (requirement \ref {3.2.5}).
 \end{itemize}
