--- a/Documentation/Requirements/subsections/algorithm.tex
+++ b/Documentation/Requirements/subsections/algorithm.tex
@@ -1,5 +1,5 @@
 This module deals with the main process behind STORM, it is the shuffling algorithm.
-\begin{figure}[h]
+\begin{figure}[H]
 	\centering
 	\includegraphics[width=15cm]{./graphics/algorithmUsecase.jpg}
 	\caption{Algorithm module use case}
@@ -9,16 +9,33 @@ This module deals with the main process behind STORM, it is the shuffling algori
 The algorithm module adds the functionality required to shuffle subjects into teams.\par
 
 \begin{enumerate}
-\item Randomize\par
+\item RandomShuffle\par
 Priority: Critical.\par
 Pre-condition: Project must have users.\par
 Pre-condition: Team size or number of teams must be specified.\par
 Post-condition: Random teams are built.\par
-    \begin{figure}[h]
+    \begin{figure}[H]
         \centering
         \includegraphics[width=15cm]{./graphics/randomizeState.jpg}
         \caption{Randomize state diagram}
     \end{figure}
+
+\item SimilarShuffle\par
+Priority: Critical.\par
+Pre-condition: Project must have users.\par
+Pre-condition: Team size or number of teams must be specified.\par
+Pre-condition: Criteria with weights should be selected.\par
+Pre-condition: Similar shuffle should be specified.\par
+Post-condition: Similar teams are built.\par
+
+\item DiverseShuffle\par
+Priority: Critical.\par
+Pre-condition: Project must have users.\par
+Pre-condition: Team size or number of teams must be specified.\par
+Pre-condition: Criteria with weights should be selected.\par
+Pre-condition: Diverse shuffle should be specified.\par
+Post-condition: Diverse teams are built.\par
+
 \end{enumerate}
-To be completed in future iterations
+%To be completed in future iterations
 \pagebreak
