User Manual update

--- a/Documentation/User Manual/UserManual.tex
+++ b/Documentation/User Manual/UserManual.tex
@@ -71,6 +71,9 @@
 	\input{./UsingTheSystem/UsingTheSystem}
 	
 \newpage
+\section{Shuffling}	
+	\input{./Shuffling/Shuffling}
+\newpage
 \section{Troubleshooting}
 	\input{./Troubleshooting/Troubleshooting}
 	
