Updated the User Manual

--- a/Documentation/User Manual/GeneralInformation/Installation.tex
+++ b/Documentation/User Manual/GeneralInformation/Installation.tex
@@ -1,8 +1,8 @@
-\subsubsection{Front-end}
+\subsubsection{User Interface}
 	Refer to this section for information on the front-end part of the system. For example the part that will be	used by the bulk of the users to shuffle the teams on the web client.\par
 	\vspace{0.3cm}
 	
-Because the system is web based, it does not have to be installed on your device. It can simply be opened from any web browser and software to open and edit .csv files such as OpenOffice or Microsoft Word.
+Because the system is web based, it does not have to be installed on your device. It can simply be opened from any web browser and software to open and edit .csv files such as OpenOffice or Microsoft Excel.
 Your web browser might ask you to install Java if you do not have the appropriate version. Your JavaScript has to be enabled in your web browser. It can be done by following this steps:
 
 \begin{description} 
