--- a/Documentation/User Manual/GeneralInformation/SystemConfiguration.tex
+++ b/Documentation/User Manual/GeneralInformation/SystemConfiguration.tex
@@ -1,19 +1,13 @@
-\subsubsection{Back-end}
-	Refer to this section for information on the back-end part of the system. For example the part that will be hosted on the server.\par
+.\par
 	\vspace{0.3cm}
 	
 
 \includegraphics[width=0.9\textwidth]{./graphics/LinuxServer.jpg}
 
-The back-end of this system should be hosted on a server, as it is a relatively small system, and open source. It can be hosted on a fairly inexpensive server which runs on Linux.
-
-Keep in mind that as the database grows, a bigger server will need to be integrated.  This will be effortless as the system is designed to be scalable.
-
-
-\subsubsection{Front-end}
+\subsubsection{User Interface}
 	Refer to this section for information on the front-end part of the system. For example the part that will be used by the bulk of the users to shuffle the teams on the web client.\par
 	\vspace{0.3cm}
 	
 For users to use the system, they only need a web activated device with a web browser. The user will be abe to import subjects for their projects by uploading a .csv file that will be added to the database. The user will also be able to download the results of their team by downloading a .csv file from the database.
 
-The STORM system works best with Google Chrome, but can be used on all other browsers.
+The STORM system works best and is tested on Google Chrome, and is likely to work on other browsers as long as your browser supports HTML 5 and JavaScript is enabled.
