--- a/Documentation/User Manual/GeneralInformation/SystemOverview.tex
+++ b/Documentation/User Manual/GeneralInformation/SystemOverview.tex
@@ -1,5 +1,13 @@
-The STORM system enables users to allocate teams, from a list of subjects, by selecting a set of criteria. The criteria can typically be marks, gender, Belbin roles, personality types or the number of times certain subjects have worked together. Multiple criteria may be used with different weights to ensure that the perfect teams are allocated. This will aid the users in such a way that the users do not have to allocate the teams manually, which may require a lot of time. The users can rather spend their time on analysing the results of each ``Rocking the Boat'' round to change the criteria for the next round more effectively.
+The STORM system enables users to allocate teams, from a list of subjects, by selecting a set of criteria. The criteria can typically be marks, gender, Belbin roles, personality types or the number of times certain subjects have worked together. Multiple criteria may be used with different weights to ensure that the perfect teams are allocated. This will aid the users in such a way that the users do not have to allocate the teams manually, which may require a lot of time. The users can rather spend their time on analysing the results of each ``Rocking the Boat'' round to change the criteria for the next round more effectively. The process, which we call
+rocking the boat
+(RTB) was
+applied to teach teamwork and to facilitate the formation
+of effective student work-teams for a third year Software Engineering module.
+RTB exposed the students to situations where they could
+learn social skills required for teamwork in a protected environment. Students were expected to make errors related
+to inexperience within teams ad learn from these mistakes.
+However, the long term negative impact that may be caused
+by such errors, was obviated.[1]
 
 \par
 
-``Pieterse V., Thompson L. \& Masrhall L ``Rocking the boat'' - An approach to facilitate formation of effective teams. Proceedings of the 41st annual conference of the Southern African Computer Lecturers' Association (SACLA). (6-8 July 2011).''
