--- a/Documentation/User Manual/GettingStarted/GettingStarted.tex
+++ b/Documentation/User Manual/GettingStarted/GettingStarted.tex
@@ -1,4 +1,4 @@
-\subsection{Front-end}
+\subsection{User Interface}
 	Refer to this section for information on the front-end part of the system. For example the part that will be used by the bulk of the users to shuffle the teams on the web client.\par
 	\vspace{0.3cm}
 	\input{./GettingStarted/FrontEnd}
