--- a/Documentation/User Manual/UserManual.tex
+++ b/Documentation/User Manual/UserManual.tex
@@ -76,6 +76,10 @@
 \newpage
 \section{Troubleshooting}
 	\input{./Troubleshooting/Troubleshooting}
+
+\newpage
+\section{References}
+	\input{./References/References}
 	
 \end{document}
 
