--- a/Documentation/User Manual/Shuffling/Shuffling.tex
+++ b/Documentation/User Manual/Shuffling/Shuffling.tex
@@ -1,5 +1,4 @@
-\begin{enumerate}
-\item The basic sorting algorithm\par
+\subsection{The basic sorting algorithm}\par
 
 The actual sorting functionality is mostly done by two basic algorithms, similar and diverse shuffle.\par
 
@@ -14,7 +13,7 @@ The similar algorithm then splits the list of subjects into a predefined number 
 
 
 
-\item Shuffling by a single field  \par
+\subsection{Shuffling by a single field}\par
 
 Selecting a single field runs the basic algorithm only once.\par
  \begin{figure}[H] 
@@ -25,7 +24,7 @@ Selecting a single field runs the basic algorithm only once.\par
 
 With only one field selected as criteria, weight is irrelevant. Distribution is as good as it's going to get for the selected field.
 
-\item Shuffling by multiple fields\par
+\subsection{Shuffling by multiple fields}\par
 
 Multi-level shuffling is used, the field with the highest weight(or first in line),
 is used to pre-shuffle the subjects into a smaller amount of teams,which are then each sorted into teams to finally reach the desired amount of teams.
@@ -35,9 +34,3 @@ is used to pre-shuffle the subjects into a smaller amount of teams,which are the
 	\includegraphics[width=16cm]{./graphics/multipleField.jpg}\par
 	\caption{Multiple field example}
 \end{figure}
-
-
-
-\end{enumerate}
-
-
