--- a/Documentation/User Manual/UsingTheSystem/UsingTheSystem.tex
+++ b/Documentation/User Manual/UsingTheSystem/UsingTheSystem.tex
@@ -1,5 +1,5 @@
-\begin{enumerate}
-\item Sign Up\par
+%\begin{enumerate}
+\subsection{Sign Up}\par
 
 To Sign up, insert your details in the following box on our Home page.
 To sign up for an account, and get a User ID, enter user details in the appropriate fields on our Home page in the following figure.\par
@@ -11,7 +11,7 @@ To sign up for an account, and get a User ID, enter user details in the appropri
 \end{figure}
 Click on submit and the system will register the user in the database.
 
-\item Login\par
+\subsection{Login}\par
 To log in to an account enter user details in the appropriate fields in the following figure.\par
  \begin{figure}[H] 
 	\centering
@@ -20,7 +20,7 @@ To log in to an account enter user details in the appropriate fields in the foll
 \end{figure}
 Click on submit and the system will navigate to the user's specific team shuffling page.
 
-\item Log out\par
+\subsection{Log out}\par
 Logging out of your account can be achieved by simply clicking on the``Logout'' button that will be displayed at the upper right corner of your screen after being logged in.
  \begin{figure}[H] 
 	\centering
@@ -28,7 +28,7 @@ Logging out of your account can be achieved by simply clicking on the``Logout'' 
 	\caption{Logging out of STORM}
 \end{figure}
 
-\item Project Setup\par
+\subsection{Project Setup}\par
 The first page you will see after logging in, will be the Project Setup page.  Where you can manage all the projects that you have created with the software. A project is created with subjects in the project, subjects can then be shuffled to create teams. Subjects can be added at any stage by uploading a .csv file. If the subjects are saved to the database, the project will include the new subjects. Projects can be added and removed from the Project Setup page. A STORM project is a container for a combination of subject sets, different team configurations (rounds) and an interface for visualizing team configurations by using graphs.\par
 \begin{itemize}
 	\item[] \textit{Please note: \textbf{You may not have multiple projects with the same name, each project should have a unique name.}}
@@ -39,7 +39,7 @@ The first page you will see after logging in, will be the Project Setup page.  W
 	\caption{Team Setup Page}
 \end{figure}
 
-\item Shuffle\par
+\subsection{Shuffle}\par
 After choosing a team to work with, the following page will be displayed.  Here you can see the team you have created, or start by creating your first team dynamically by using the options at the top of the page.\par
  \begin{figure}[H] 
 	\centering
@@ -48,7 +48,7 @@ After choosing a team to work with, the following page will be displayed.  Here 
 \end{figure}
 
 \newpage
-\item Subject Setup\par
+\subsection{Subject Setup}\par
 This options tab allows users to review their subject data. All the data uploaded to the database are showed here. You can add subjects, delete subjects or edit subjects.\par
  \begin{figure}[H] 
 	\centering
@@ -72,7 +72,7 @@ This options tab allows users to review their subject data. All the data uploade
 	\caption{Edit and Delete Subjects}
 \end{figure}
 
-\item Shuffle Setup\par
+\subsection{Shuffle Setup}\par
 This options tab allows users to make choices about the shuffling algorithm to use, as well as the weights of criteria in multi criteria shuffles.\par
  \begin{figure}[H] 
 	\centering
@@ -80,7 +80,7 @@ This options tab allows users to make choices about the shuffling algorithm to u
 	\caption{Shuffle Setup dropdown}
 \end{figure}
 
-\item Upload CSV\par
+\subsection{Upload CSV}\par
 A .csv file can be uploaded into the system after a project has been created to add more subjects and criteria to the project. Firstly export the .csv from STORM, update the .csv and import the .csv as can be seen using the buttons in the figure below.\par
  \begin{figure}[H] 
 	\centering
@@ -93,7 +93,7 @@ A .csv file can be uploaded into the system after a project has been created to 
 	\begin{enumerate}
 		\item \textit{Export the .csv file and save it to the desktop.}
 		\item \textit{Remove the first column in the.csv file which is a unique ID.}
-		\item \textit{Remove any unwanted columns (criteria).}
+		\item \textit{Remove any unwanted columns (criteria) or rows (subjects).}
 		\item \textit{Create a new project and upload the .csv file that has been updated.}
 	\end{enumerate}
 	\item The following rules apply to uploading the initial .csv
@@ -101,7 +101,7 @@ A .csv file can be uploaded into the system after a project has been created to 
 		\item The file cannot be empty
 		\item The file must contain at least 1 column
 		\item The file must contain at least 2 subjects
-		\item The first Row must be column headers(Criteria names)
+		\item The first row must be column headers(Criteria names)
 		%\item One of the columns must be a unique identifier and have a unique value for every subject.
 		\item The first column must contain subject names with header ``Name'' as this value is the default value to display subjects in the team setup shuffling page.
 		\item Each student must contain a value for each column.
@@ -112,7 +112,7 @@ A .csv file can be uploaded into the system after a project has been created to 
 	\end{enumerate}
  \begin{figure}[H] 
 	\centering
-	\includegraphics[width=13cm]{./graphics/MinInitial.png}\par
+	\includegraphics[width=6cm]{./graphics/MinInitial.png}\par
 	\caption{Minimal Initial Upload}
 \end{figure}
  \begin{figure}[H] 
@@ -123,16 +123,16 @@ A .csv file can be uploaded into the system after a project has been created to 
  \begin{figure}[H] 
 	\centering
 	\includegraphics[width=7cm]{./graphics/IncorrectInitial.png}\par
-	\caption{Incorrect Initial Upload Example - Rules (e) \& (f) broken}
+	\caption{Incorrect Initial Upload Example - Rules (5) \& (6) broken}
 \end{figure}
  \begin{figure}[H] 
 	\centering
 	\includegraphics[width=7cm]{./graphics/IncorrectInitial1.png}\par
-	\caption{Incorrect Initial Upload Example - Rules (c) \& (e) broken}
+	\caption{Incorrect Initial Upload Example - Rules (3) \& (5) broken}
 \end{figure}
 	\item The following rules apply to uploading additional .csv files
 	\begin{enumerate}
-		\item[] \textit{All initial upload rules apply to any additional uploads, except for rule (c).}
+		\item[] \textit{All initial upload rules apply to any additional uploads, except for rule (3).}
 		\item Hints
 		\begin{enumerate}
 			\item Download a csv containing all subjects in the current set.
@@ -164,7 +164,7 @@ A .csv file can be uploaded into the system after a project has been created to 
 	\end{figure}
 	\item Rules for adding subjects and criteria (Growing the set horizontally and vertically)
 	\begin{enumerate}
-		\item For only adding new criteria and subjects use the whole subject set. (can be downloaded from the team setup 		page)
+		\item For adding new criteria and subjects you have to use the whole subject set. (can be downloaded from the team setup 		page)
 		\item Append new criteria in the first available column next to the last criteria in the current set.
 		\item Append subjects to the end of the file after the last subject in the current set.
 		\item New students must have values for each criteria in the current set, even newly added criteria.
@@ -177,6 +177,6 @@ A .csv file can be uploaded into the system after a project has been created to 
 	\end{figure}
 
 \end{itemize}
-\end{enumerate}
+%\end{enumerate}
 
 
