--- a/Documentation/User Manual/Troubleshooting/Troubleshooting.tex
+++ b/Documentation/User Manual/Troubleshooting/Troubleshooting.tex
@@ -1,1 +1,13 @@
-"Place Holder"
+\subsection{Errors}
+\subsubsection{Functionality errors}
+\begin{itemize}
+\item If you have shuffled and the wrong output is given, ensure that you have kept the integrity of the data and that no validation rules has been broken. For example no numeric value has been added instead of ``M'' or ``F'' for gender.
+\item If some participants stayed in the subject pool after shuffling, please return the subject to the pool, refresh the page and try again. If the error persists, please ensure the integrity of your data is still correct.
+
+\end{itemize}
+\subsubsection{General errors}
+\begin{itemize}
+\item If you receive the following error: ``An error has occured: Could not connect to database''. Please check you internet connection and try again.
+\item If the page is unresponsive, please refresh the page and try again.
+
+\end{itemize}
