Changes to Requirements spec

--- a/Documentation/Requirements/subsections/userAccess.tex
+++ b/Documentation/Requirements/subsections/userAccess.tex
@@ -1,7 +1,7 @@
 This module deals with the STORM user access, specifically signing up, logging in, logging out and user authentication.
 
 \subsubsection{Use-cases}
-\begin{figure}[h]
+\begin{figure}[H]
     \centering
 \includegraphics[width=15cm]{./graphics/userAccessUseCase.jpg}
     \caption{ User access module use case}
@@ -13,7 +13,7 @@ This module deals with the STORM user access, specifically signing up, logging i
 Priority: Critical.\par
 Pre-condition: Client must have a valid e-mail address.\par
 Post-condition: Client has a STORM profile.\par
-\begin{figure}[h]
+\begin{figure}[H]
     \centering
     \includegraphics[width=15cm]{./graphics/signUpState.jpg}
     \caption{SignUp state diagram}
@@ -25,7 +25,7 @@ Post-condition: Client can now use STORM functionality.\par
 \item Log out\par
 Priority: Critical.\par
 Pre-condition: Client must be logged into STORM.\par
-\begin{figure}[h]
+\begin{figure}[H]
     \centering
     \includegraphics[width=15cm]{./graphics/logInOutState.jpg}
     \caption{Login/logout state diagram}
