--- a/Documentation/Requirements/subsections/visionAndScope.tex
+++ b/Documentation/Requirements/subsections/visionAndScope.tex
@@ -3,9 +3,9 @@
 In 2013 lecturers of the department of Computer Science, which resides at the University of Pretoria,
 approached honors students of the module ``Educational Software Development'' to develop a team
 shuffling system. 
-The system was going to be used by the lecturers of the module ``Software Engineerin'' to
+The system was to be used by the lecturers of the module ``Software Engineering'' to
 determine teams for the ``Rocking the boat'' exercise of the ``Software Engineering'' module using a
-set of lecturer defined criteria to select the teams with. An incomplete requirements specification document
+set of lecturer defined criteria to create the teams with. An incomplete requirements specification document
 was designed and the project was halted. 
 
 \subsubsection{Project Background}
@@ -16,8 +16,8 @@ specification, not completely discarding functionality specified in the previous
 as the development life-cycle persists.
 
 \subsection{Project Scope}
-The complete system should enable users to build teams, from a list of students, by selecting a
+The complete system should enable users to build teams, from a list of subjects, by selecting a
 set of criteria. This will aid the users in such a way that the users do not have to build the teams
-manually, which may require a lot of time. The users can spend their time rather on analyzing
+manually, which may require a lot of time and effort. The users can spend their time rather on analyzing
 the results of each ``Rocking the Boat'' round to change the criteria for the next round more
 effectively.
