Spelling correction user manual

--- a/Documentation/User Manual/GeneralInformation/SystemOverview.tex
+++ b/Documentation/User Manual/GeneralInformation/SystemOverview.tex
@@ -5,7 +5,7 @@ applied to teach teamwork and to facilitate the formation
 of effective student work-teams for a third year Software Engineering module.
 RTB exposed the students to situations where they could
 learn social skills required for teamwork in a protected environment. Students were expected to make errors related
-to inexperience within teams ad learn from these mistakes.
+to inexperience within teams and learn from these mistakes.
 However, the long term negative impact that may be caused
 by such errors, was obviated.[1]
 
