Changed User Manual spacing

--- a/Documentation/User Manual/GettingStarted/FrontEnd.tex
+++ b/Documentation/User Manual/GettingStarted/FrontEnd.tex
@@ -6,9 +6,10 @@
 		sign up for a UserName on the website, Log In, and make use of the shuffling system.
  		\begin{figure}[H] 
 		 	\centering
-			 \includegraphics[width=13cm]{./graphics/HomePage.jpg}
+			 \includegraphics[width=17cm]{./graphics/HomePage.jpg}
 			 \caption{STORM Homepage}
 		 \end{figure}
+\newpage
  	\item[get a User ID] \hfill \\
 		To sign up for an account, and get a User ID, enter user details in the appropriate fields in the 		following figure.\par
 		 \begin{figure}[H] 
