Revised Specifications documents

--- a/Documentation/Requirements/Architectural Requirements.tex
+++ b/Documentation/Requirements/Architectural Requirements.tex
@@ -23,6 +23,7 @@
 
 %Thesis title
     {\uppercase{\Large Project Storm \par}}
+    {\uppercase{\Large Architectural Requirements Specification\par\par}}
    	{\uppercase{\Large Team NAME \par}}
     \vspace{1cm}
 %Author's name
@@ -47,22 +48,6 @@
 
 \tableofcontents
 \newpage
-\section{Vision and Scope}
-\input{./subsections/visionAndScope.tex}
-
-\section{Application requirements and design}
-\subsection{Modular Design}
-\input{./subsections/modularDesign.tex}
-\subsection{User Access Module}
-\input{./subsections/userAccess.tex}
-\subsection{Project Module}
-\input{./subsections/project.tex}
-\subsection{Database Interaction Module}
-\input{./subsections/dbAccess.tex}
-\subsection{Algorithm Module}
-\input{./subsections/algorithm.tex}
-\subsection{Reporting Module}
-\input{./subsections/reporting.tex}
 \section{Architectural Requirements}
 This section discusses the software architecture requirements — that is the requirements around the
 software infrastructure within which the application functionality is to be developed. The purpose
