--- a/Documentation/Requirements/subsections/accessAndIntegrationRequirements.tex
+++ b/Documentation/Requirements/subsections/accessAndIntegrationRequirements.tex
@@ -21,7 +21,7 @@ The system will be accessible by human users through the following channels:\par
 	\item Express.js
 	\item EJS
 	\item Mongoose
-	\item SMTP
+	\item MS Excell or any CSV file reader.
 	\end{itemize}
 \end{itemize}
 \subsubsection{Integration channels}
