--- a/Documentation/Requirements/subsections/qualityRequirements.tex
+++ b/Documentation/Requirements/subsections/qualityRequirements.tex
@@ -7,6 +7,7 @@ Usability is one of the most important quality attributes. Usability tests shoul
 \item users find any aspects of the system cumbersome, non-intuitive or frustrating.
 \item the user has a positive experience and finds the functionality easy to use and learn.
 \end{itemize}
+Other API's such as Bootstrap and JQUERY UI will be used to improve the user interface ultimately improving the usability.
 
 \subsubsection{Scalability} \label{3.2.2}
 The system must implement a very generic optimization algorithm in order to be used by different parties in different contexts. In addition to different environments the system should be able to optimize groups for an extremely large number of subjects.
